--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.5.0",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "pwa-rails": "^4.0.6"
   }
 }
