--- a/app/assets/javascripts/manifest.json
+++ b/app/assets/javascripts/manifest.json
@@ -10,13 +10,47 @@
   "orientation": "portrait",
   "dir": "rtl",
   "lang": "pt-BR",
-  "icons": [{
-    "src": "https://github.com/Hey-Feres/Feres-News/blob/master/app/assets/images/Logo.png",
-    "sizes": "70x70",
-    "type": "image/png"
-  }, {
-    "src": "https://github.com/Hey-Feres/Feres-News/blob/master/app/assets/images/Logo.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  }]
+  "icons": [
+    {
+      "src": "apple-touch-icon-57x57.png",
+      "sizes": "",
+      "type": "image/png"
+    }, 
+    {
+      "src": "apple-touch-icon-72x72.png",
+      "sizes": "",
+      "type": "image/png"
+    },
+    {
+      "src": "apple-touch-icon-76x76.png",
+      "sizes": "",
+      "type": "image/png"
+    }, 
+    {
+      "src": "apple-touch-icon-114x114.png",
+      "sizes": "",
+      "type": "image/png"
+    },
+    {
+      "src": "apple-touch-icon-120x120.png",
+      "sizes": "",
+      "type": "image/png"
+    }, 
+    {
+      "src": "apple-touch-icon-144x144.png",
+      "sizes": "",
+      "type": "image/png"
+    },
+    {
+      "src": "apple-touch-icon-152x152.png",
+      "sizes": "",
+      "type": "image/png"
+    }, 
+    {
+      "src": "apple-touch-icon-180x180.png",
+      "sizes": "",
+      "type": "image/png"
+    }
+  ],
+  "splash_pages": null
 }
