Update Status Bar

--- a/app/assets/javascripts/manifest.json
+++ b/app/assets/javascripts/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "background_color": "#FFFFFF",
   "description": "",
-  "theme_color": "#000000",
+  "theme_color": "#FFFFFF",
   "orientation": "portrait",
   "dir": "rtl",
   "lang": "pt-BR",
